testdata/syntax-error/syntax_error.go
package main

import "fmt"

func main() {
	fmt.Printz("Can't compile this!\n")
}
